--- a/src/member/PC_JON_1001.html
+++ b/src/member/PC_JON_1001.html
@@ -29,7 +29,11 @@
 									<div class="member__row">
 										<div class="member__right">
 											<span class="member__logo">
-												<i></i>
+												<i>
+													<svg class="svg-ico">
+														<use xlink:href="../assets/images/ico.svg#logo"></use>
+													</svg>
+												</i>
 											</span>
 										</div>
 									</div>
