--- a/src/member/PC_LOG_1002.html
+++ b/src/member/PC_LOG_1002.html
@@ -29,7 +29,11 @@
 								<div class="member__card member__card--result">
 									<div class="member__noti member__noti--center">
 										<p class="member__text">
-											<i class="member__ico"></i>
+											<i class="member__ico">
+												<svg class="svg-ico">
+													<use xlink:href="../assets/images/ico.svg#ico_info"></use>
+												</svg>
+											</i>
 											<span>다음정보로 가입된 아이디가 총 <span class="member__current">1</span>개 있습니다</span>
 											<!-- <span>다음정보로 가입된 아이디가 총 <span class="member__current">{$idCnt}</span>개 있습니다</span> -->
 										</p>
