--- a/src/myshop/PC_MYP_1004_L.html
+++ b/src/myshop/PC_MYP_1004_L.html
@@ -461,7 +461,14 @@
 		<!-- 현금영수증 신청 팝업 -->
 		<div class="layer__body receipt-request" style="display: block;">
 			<div class="layer__wrap">
-				<div class="layer__close"><a href="#" class="btn__close modal__hide"><span class="a11y">닫기</span></a></div>
+				<div class="layer__close">
+					<a href="#" class="btn__close modal__hide">
+						<svg class="svg-ico">
+							<use xlink:href="../assets/images/ico.svg#ico_close"></use>
+						</svg>
+						<span class="a11y">닫기</span>
+					</a>
+				</div>
 				<div class="layer__header">
 					<p class="layer__title">현금영수증 신청양식 작성</p>
 				</div>
