--- a/src/myshop/PC_MYP_1008_L.html
+++ b/src/myshop/PC_MYP_1008_L.html
@@ -199,7 +199,14 @@
 		<!-- 취소/반품/교환 상세정보 팝업 -->
 		<div class="layer__body cer-detail" style="display: block;">
 			<div class="layer__wrap">
-				<div class="layer__close"><a href="#" class="btn__close modal__hide"><span class="a11y">닫기</span></a></div>
+				<div class="layer__close">
+					<a href="#" class="btn__close modal__hide">
+						<svg class="svg-ico">
+							<use xlink:href="../assets/images/ico.svg#ico_close"></use>
+						</svg>
+						<span class="a11y">닫기</span>
+					</a>
+				</div>
 				<div class="layer__header">
 					<p class="layer__title">취소/반품/교환 상세정보</p>
 				</div>
