--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -685,7 +685,14 @@
 		<!-- 장바구니담기 팝업 //-->
 		<div module="Product_BasketAdd" id="Product_BasketAdd" class="layer__body product_basketadd">
 			<div class="layer__wrap">
-				<div class="layer__close"><a href="#" data-layer="Product_BasketAdd" class="btn__close modal__hide"><span class="a11y">닫기</span></a></div>
+				<div class="layer__close">
+					<a href="#" data-layer="Product_BasketAdd" class="btn__close modal__hide">
+						<svg class="svg-ico">
+							<use xlink:href="../assets/images/ico.svg#ico_close"></use>
+						</svg>
+						<span class="a11y">닫기</span>
+					</a>
+				</div>
 				<div class="layer__content">
 					<i class="ico_basket"></i>
 					<p>장바구니에 상품이 정상적으로 담겼습니다.</p>
@@ -700,7 +707,14 @@
 		<!-- 리뷰등록 팝업 //-->
 		<div module="" id="Product_ReviewWrite" class="layer__body product_reviewwrite">
 			<div class="layer__wrap">
-				<div class="layer__close"><a href="#none" data-layer="Product_ReviewWrite" class="btn__close modal__hide"><span class="a11y">닫기</span></a></div>
+				<div class="layer__close">
+					<a href="#" data-layer="Product_ReviewWrite" class="btn__close modal__hide">
+						<svg class="svg-ico">
+							<use xlink:href="../assets/images/ico.svg#ico_close"></use>
+						</svg>
+						<span class="a11y">닫기</span>
+					</a>
+				</div>
 				<div class="layer__content">
 					<div class="rv__product">
 						<p class="rv__figure"><img src="../assets/images/product.png"></p>
@@ -820,7 +834,14 @@
 		<!-- 리뷰상세 팝업 //-->
 		<div module="" id="Product_ReviewView" class="layer__body product_reviewview">
 			<div class="layer__wrap">
-				<div class="layer__close"><a href="#" data-layer="Product_ReviewView" class="btn__close modal__hide"><span class="a11y">닫기</span></a></div>
+				<div class="layer__close">
+					<a href="#" data-layer="Product_ReviewView" class="btn__close modal__hide">
+						<svg class="svg-ico">
+							<use xlink:href="../assets/images/ico.svg#ico_close"></use>
+						</svg>
+						<span class="a11y">닫기</span>
+					</a>
+				</div>
 				<div class="layer__content">
 					<div class="cont_detail">
 						<div class="rv__product">
