--- a/src/product/PC_SHP_1004.html
+++ b/src/product/PC_SHP_1004.html
@@ -56,7 +56,12 @@
           </div> -->
           <div id="SearchLayer" class="search__layer">
             <div class="search__form">
-              <a href="#" data-layer="SearchLayer" class="btn__close modal__hide"><span class="a11y">닫기</span></a>
+              <a href="#" data-layer="SearchLayer" class="btn__close modal__hide">
+                <svg class="svg-ico">
+                  <use xlink:href="../assets/images/ico.svg#ico_close"></use>
+                </svg>
+                <span class="a11y">닫기</span>
+              </a>
               <form action="">
                 <fieldset>
                   <legend>상세검색</legend>
