로그인 수정사항

--- a/src/member/PC_LOG_1000.html
+++ b/src/member/PC_LOG_1000.html
@@ -16,7 +16,7 @@
 
     <div class="container">
 			<div class="member">
-				<div class="member__container">
+				<div class="member__container member__container--login">
 					<div class="login">
 						<div class="login__container">
 							<div class="login__left">
