메인, 상품목록 수정

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -485,16 +485,16 @@
 						<div class="celeb-curation__swiper">
 							<div class="celeb-curation__celeb">
 								<div class="celeb-curation__cut">
-									<img src="./assets/images/@dummy_seleb01.png" alt="" loading="lazy">
+									<img src="./assets/images/seleb01_cut.jpg" alt="" loading="lazy">
 								</div>
 								<div class="celeb-curation__cut">
-									<img src="./assets/images/@dummy_seleb02.png" alt="" loading="lazy">
+									<img src="./assets/images/seleb02_cut.jpg" alt="" loading="lazy">
 								</div>
 								<div class="celeb-curation__cut">
-									<img src="./assets/images/@dummy_seleb03.png" alt="" loading="lazy">
+									<img src="./assets/images/seleb03_cut.jpg" alt="" loading="lazy">
 								</div>
 								<div class="celeb-curation__cut">
-									<img src="./assets/images/@dummy_seleb04.png" alt="" loading="lazy">
+									<img src="./assets/images/seleb04_cut.jpg" alt="" loading="lazy">
 								</div>
 							</div>
 							<div class="swiper">
