오픈 대응 수정

--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -50,7 +50,7 @@
 											</div>
 											<div class="button">
 												<div class="button__container">
-													<button type="button" class="button__item button__item--cart">CART</button>
+													<button type="button" class="button__item button__item--cart"><img src="../assets/images/btn_count_down.gif" alt=""> CART</button>
 													<a href="#" class="button__item">DETAIL</a>
 												</div>
 											</div>
