오픈 후 수정

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -76,9 +76,9 @@
 						<div id="product__option" class="product__option">
 							<p class="product__opt--title">OPTION</p>
 							<ul class="product__opt--list">
-								<li><button class="opt__button opt__selected">F</button></li>
-								<li><button class="opt__button">S</button></li>
-								<li><button class="opt__button">M</button></li>
+								<li title="F [품절]"><button class="opt__button opt__selected">F</button></li>
+								<li title="S"><button class="opt__button">S</button></li>
+								<li title="M"><button class="opt__button">M</button></li>
 								<li><button class="opt__button">L</button></li>
 								<li><button class="opt__button" disabled>XL</button></li>
 							</ul>
